composer install storage on server

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
+            "ln -sr storage/app/public public/storage",
             "chmod -R 777 public/"
         ]
     },
